# Segmented-Spacetime-Mass-Projection-Unified-Results

./: .env.example  .gitattributes  .gitignore  0804.0266v1.pdf.md  ADDONS_USAGE.md  ANTI-CAPITALIST SOFTWARE LICENSE (v 1.4)  Ammonia_observations_in_the_LBV_nebula_G7929046_Di.pdf.md  BUGFIXES_2025-10-18.md  BUILD_DEBIAN_PACKAGE.md  CHANGELOG.md  CHANGELOG_PAPER_EXPORTS.md  CITATION.cff  CLEAR_CACHE.bat  CLEAR_CACHE.sh  CLI_FIGURE_FLAGS.md  CODE_DOCS_BATCH_UPDATE.md  COLAB_COMPATIBILITY_CHECK.md  COLAB_COMPLETENESS_CHECK.md  COLAB_README.md  COMBINED_FIXES_IMPACT.md  COMPLETE_INTEGRATION_SUMMARY.md  COMPLETE_REPOSITORY_TEST_REPORT.md  COMPREHENSIVE_DATA_ANALYSIS.md  COMPREHENSIVE_TESTING_GUIDE.md  COMPREHENSIVE_TESTS_SUMMARY.md  CONTRIBUTING.md  COPY_TO_TEST_SUITES.ps1  CRITICAL_TEST_ISSUES.md  CROSS_PLATFORM_COMPATIBILITY_ANALYSIS.md  CROSS_PLATFORM_GUIDE.md  CROSS_PLATFORM_NOTES.md  CROSS_PLATFORM_SUBPROCESS_FIX.md  CROSS_PLATFORM_TESTING.md  CygnusX_DiamondRing_CII_rings.md  DATA_ACCESS_REPRODUCIBILITY_CRISIS.md  DATA_ACQUISITION_PLAN.md  DATA_CHANGELOG.md  DATA_COLUMNS_README.md  DATA_EXPANSION_STRATEGY.md  DATA_FETCHING_README.md  (+368 more)
agent_out/: MANIFEST.json
agent_out_debug/: MANIFEST.json
agent_out_geodesic/: MANIFEST.json
agent_out_hint/: MANIFEST.json
agent_out_hybrid/: MANIFEST.json
agent_out_temp/: MANIFEST.json
ci/: POWERSHELL_CRASH_FIX.md  README.md  autorun_suite.py  changed_files.json  check_no_abs_paths.py  fix_repo_paths.py  nightly_autorun.py  run_all_tests.py  run_safe.ps1  run_suite_safe.bat  suite_config.yaml  suite_manifest.json  summary-all-tests.py  summary_visualize.py
cli/: __init__.py  ssz_rings.py
config/: sources.yaml
configs/: cosmology_frame.yaml  gaia_cones.json  param_sweep.yaml  ssz_params.yaml
core/: __init__.py  compare.py  inference.py  lensing.py  predict.py  stability.py  stats.py  sweep.py  uncertainty.py  xval.py
data/: DATA_TYPE_USAGE_GUIDE.md  ESO_CLEAN_DATASETS_README.md  example_rings.csv  example_rings_results.csv  real_data_continuum.csv  real_data_emission_lines.csv  real_data_emission_lines_best.csv  real_data_emission_lines_clean.csv  real_data_full_typed.csv  ring_temperature_data.csv  stellar_parameters_example.json
debian/: changelog  control  debhelper-build-stamp  rules  segmented-spacetime-suite-extended.docs  segmented-spacetime-suite-extended.install  segmented-spacetime-suite-extended.postinst
debug_compare/: MANIFEST.json
docs/: CODE_IMPLEMENTATION_GUIDE.md  CODE_IMPLEMENTATION_GUIDE_DE.md  DATA_ACQUISITION_COMPLETE_GUIDE.md  EXAMPLES_AND_APPLICATIONS.md  EXAMPLES_AND_APPLICATIONS_DE.md  GAIA_FETCH.md  MANUAL_ESO_DATA_ACQUISITION_GUIDE.md  MATHEMATICAL_FORMULAS.md  MATHEMATICAL_FORMULAS_DE.md  PHYSICS_FOUNDATIONS.md  PHYSICS_FOUNDATIONS_DE.md  PIPELINE_DIAGRAM.md  QUICK_START.md  README.md  REPRODUCIBILITY.md  SSZ_COSMOS_PLAN.md  SSZ_COSMOS_ROADMAP.md  Segmented_Spacetime_Foundations.md  THEORY_AND_CODE_INDEX.md  segwave_guide.md
final_reports/: INDEX.md  RESULTS_ANALYSIS.md  SEGSPACE_CONSOLIDATED_FINDINGS.md  suite_manifest.json
papers/: CALIBRATION_BIAS_SECTION.md  DATA_ACCESS_DISCUSSION_SECTION.md
queries/: gaia_dr3_core.sql
reports/: DEMO_MANIFEST.json  PAPER_EXPORTS_MANIFEST.json  RUN_SUMMARY.md  SSZ_THEORY_PREDICTIONS_REAL_DATA_SUMMARY.md  VALIDATION_CERTIFICATE.md  cygx_test.csv  cygx_test.txt  full-output.md  g79_test.csv  g79_test.txt  hawking_proxy_fit.md  info_preservation_by_source.csv  ring_chain.csv  segment_redshift.csv  segment_redshift.md  summary-output.md  test_fit.csv  test_fit.txt
ring_temp2v/: ring_results.csv  ring_summary.json
scripts/: __init__.py  _repo_paths.py  analyze_bilingual_coverage.py  analyze_readability.py  audit_cross_references.py  audit_mathematical_notation.py  autofetch.py  check_concept_flow.py  check_consistency.py  check_data_documentation.py  check_examples.py  check_formula_derivations.py  check_limit_behavior.py  check_pdf_md_quality.py  (+17 more)
(+336 files in other folders)
